@@ -16,12 +16,12 @@ endif
 
 lib_LTLIBRARIES = libxml++-2.6.la
 libxml___2_6_la_LDFLAGS = -version-info $(GENERIC_LIBRARY_VERSION) $(win32_dlls_ldflags) 
-libxml___2_6_la_LIBADD = @LIBXML_LIBS@ \
-                         parsers/libparsers.la \
+libxml___2_6_la_LIBADD = parsers/libparsers.la \
                          validators/libvalidators.la \
                          exceptions/libexceptions.la \
                          nodes/libnodes.la \
-			 io/libio.la
+                         io/libio.la \
+						 @LIBXML_LIBS@
 libxml___2_6_la_SOURCES = $(cc_sources) $(h_sources_public) $(h_sources_private) $(cc_sources_private)
 
 # Install the headers:
